<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLeyot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="11dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_person"
            app:layout_constraintStart_toStartOf="@id/linearLeyot"
            app:layout_constraintTop_toTopOf="@id/linearLeyot" />

        <TextView
            style="@style/profileName"
            android:id="@+id/asep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="7dp"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@id/linearLeyot"
            tools:text="Hello, Asep" />
    </LinearLayout>

    <ImageView
        android:id="@+id/pizza_picture"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:foregroundGravity="center_horizontal"
        android:layout_marginTop="44dp"
        android:src="@drawable/pizza_place"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLeyot" />

    <TextView
        style="@style/BrownStyle"
        android:id="@+id/storeBoy"
        android:layout_width="wrap_content"
        android:text="@string/store_view"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="26dp"
        app:layout_constraintTop_toBottomOf="@id/pizza_picture"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        style="@style/BrownStyle"
        android:id="@+id/cihampelas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="19dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pizza_picture"
        tools:text="Cihampelas"/>

    <TextView
        style="@style/BrownStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="30dp"
        android:text="@string/location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/storeBoy"/>

    <TextView
        android:id="@+id/location"
        style="@style/BrownStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/mapLogo"
        app:layout_constraintTop_toBottomOf="@id/cihampelas"
        android:text="@string/find_on_maps" />

    <ImageView
        android:id="@+id/mapLogo"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:foregroundGravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="19dp"
        android:src="@drawable/ic_location_pin_svg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cihampelas" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/menuButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="35dp"
        style="@style/BrownStyle"
        android:background="@drawable/button_background"
        android:text="@string/see_menus"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location" />




</androidx.constraintlayout.widget.ConstraintLayout>