<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/home_pizza"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="44dp"
        android:contentDescription="home_pizza"
        android:src="@drawable/pizza_home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/storeTextView"
        style="@style/BrownStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/store"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.62"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_pizza" />

    <Spinner
        android:id="@+id/places_spinner"
        style="@style/BlackStyle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="20dp"
        android:padding="2dp"
        android:background="@drawable/bg_spinner_places"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/storeTextView"
        tools:text="test" />

    <TextView
        android:id="@+id/spinner_teksview"
        style="@style/BlackStyle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_textbox"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        app:layout_constraintTop_toBottomOf="@+id/places_spinner"
        tools:layout_editor_absoluteX="16dp"
        tools:text="test" />

    <TextView
        android:id="@+id/YourName"
        style="@style/BrownStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/your_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_teksview" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inputYourName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="20dp"
        android:paddingStart="10dp"
        style="@style/BlackStyle"
        android:background="@drawable/bg_textbox"
        android:textColorHint="@color/textColorhint"
        tools:hint="Please fill your name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/YourName"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_background"
        style="@style/BrownStyle"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputYourName"/>


</androidx.constraintlayout.widget.ConstraintLayout>