<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/pizzaPicture"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:foregroundGravity="center_horizontal"
        android:scaleType="fitXY"
        android:src="@drawable/pepperoni_pizzaa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/BrownStyle"
        android:id="@+id/pizzaName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="211dp"
        android:layout_marginBottom="9dp"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/pizzaPicture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Pepperoni Pizza"/>

    <LinearLayout
        android:id="@+id/linerLeod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pizzaPicture">

    <TextView
        android:id="@+id/pizzaPrice"
        style="@style/BrownStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/price"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/pizzaPrice1"
        app:layout_constraintTop_toBottomOf="@+id/pizzaPicture" />

    <TextView
        android:id="@+id/pizzaPrice1"
        style="@style/BrownStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pizzaPicture"
        tools:text="Rp.66.000,00"/>

    </LinearLayout>

    <TextView
        android:id="@+id/pizzaDescription"
        style="@style/BrownStyle"
        android:lineSpacingExtra="5dp"
        android:letterSpacing="0.05"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginHorizontal="30dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linerLeod"
        tools:text="Pepperoni pizza adalah pizza yang memiliki
        topping daging pepperoni sapi asli. Di Italia, pepperoni disebut salame piccante (salami panas).Biasa menjadi bahan baku pizza di Amerika Serikat, yang sering mewakili 30% pelengkap. Pizza ini cocok untuk santap siang ataupun malam anda"/>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="22dp"
        android:layout_marginTop="28dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pizzaDescription">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/orderButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_background"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/order_now"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"/>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/backButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="75dp"
            android:background="@drawable/button_background"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/back_button"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"/>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>